# bibli-o-mat

./: .env  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Pipfile  README.md  Taskfile.yaml  bibmanager.ipynb  pyproject.toml  setup.sh
.devcontainer/: devcontainer.json
.github/workflows/: build_and_push.yml  format_python_code.yml  release.yml
bibli_o_mat/: brain.py  credential_helper.py  main.py  metropol_library.py  semanic_kernel.py  send_mail.py
src/: CredentialHelper.py  LibManager.py  bibli-o-mat.py  cli.py  credential_helper.py  db.json  metropol_library.py  notify.py  send_mail.py
