[tool.poetry]
name = "bibli-o-mat"
version = "0.1.1"
description = ""
authors = ["thinkJD <jd.georgens@gmail.com>"]
readme = "README.md"
packages = [{include = "bibli_o_mat"}]

[tool.poetry.scripts]
bibli-o-mat = "bibli_o_mat.main:app"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.28.2"
typer = "^0.7.0"
tinydb = "^4.7.1"
mailtrap = "^2.0.0"
rich = "^13.3.4"
semantic-kernel = "^0.2.3.dev0"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"

[tool.poetry.group.dev.dependencies]
typer-cli = "^0.0.13"
autopep8 = "^2.0.2"
ipykernel = "^6.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
